--- a/signup.html
+++ b/signup.html
@@ -31,7 +31,7 @@
                                 <input type="number" class="inp otpnum" placeholder="2">
                                 <input type="number" class="inp otpnum" placeholder="3">
                             </div>
-                            <button type="submit" class="btn">Next</button>
+                            <a href="./templates/index.html" class="btn" style="text-decoration:none;color:#FEFEFE;">Login</a>
                         </form>
                         <!--Chage of Link with the help of Angular2+ when user wants to shift to signup page-->
                         <div class="changeLinks">
