--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             </div>
             <ul style="height:100%; display:flex;flex-direction:column;align-items:center;justify-items:center;align-content:center;justify-content:center;">
                 <li onclick="showbar()"><a id="#ct1" style="cursor: pointer;" onclick="sto(this)">About Us</a></li>
-                <li><a href="./login.html">Sign Up</a></li>
-                <li><a href="./signup.html">Login</a></li>
+                <li><a href="./login.html" style="text-decoration:none;color:#FEFEFE;">Sign Up</a></li>
+                <li><a href="./signup.html" style="text-decoration:none;color:#FEFEFE;">Login</a></li>
             </ul>
         </div>
     </div>
@@ -38,7 +38,7 @@
         <header class="flex-container">
             <div class="left">
                 <!-- <img src="./assets/img/logoredwhite.png" alt=""> -->
-                <h2 style="margin:8% 5%;">PassMeIN</h2>
+                <h2 style="margin:20px 5%;">PassMeIN</h2>
             </div>
             <div class="right">
                 <div class="links">
