--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
                                 <input type="number" min="0" max="9" step="1" class="inp otpnum" placeholder="2">
                                 <input type="number" min="0" max="9" step="1" class="inp otpnum" placeholder="3">
                             </div>
-                            <a href="./templates/index.html"><button type="submit" class="btn">Login</button></a>
+                            <a href="./templates/index.html" class="btn" style="text-decoration:none;color:#FEFEFE;">Login</a>
                         </form>
                         <form action="" class="inpform inp-phone">
                             <input type="tel" class="inp" name="usrtel" placeholder="PHONE (+91 981XXXXXX)">
@@ -43,7 +43,7 @@
                                 <input type="number" min="0" max="9" step="1" class="inp otpnum" placeholder="2">
                                 <input type="number" min="0" max="9" step="1" class="inp otpnum" placeholder="3">
                             </div>
-                            <a href="./templates/index.html"><button type="submit" class="btn">Login</button></a>
+                            <a href="./templates/index.html" class="btn" style="text-decoration:none;color:#FEFEFE;">Login</a>
                         </form>
                         <!--Chage of Link with the help of Angular2+ when user wants to shift to signup page-->
                         <div class="changeLinks">
