--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             </div>
             <ul style="height:100%; display:flex;flex-direction:column;align-items:center;justify-items:center;align-content:center;justify-content:center;">
                 <li onclick="showbar()"><a id="#ct1" style="cursor: pointer;" onclick="sto(this)">About Us</a></li>
-                <li><a href="./login.html" style="text-decoration:none;color:#FEFEFE;">Sign Up</a></li>
-                <li><a href="./signup.html" style="text-decoration:none;color:#FEFEFE;">Login</a></li>
+                <li><a href="./signup.html" style="text-decoration:none;color:#FEFEFE;">Sign Up</a></li>
+                <li><a href="./login.html" style="text-decoration:none;color:#FEFEFE;">Login</a></li>
             </ul>
         </div>
     </div>
